# Nero-2.0

./: .gitignore  CMakeLists.txt  Home.cpp  Home.h  NERO.pro  README.md  ThermometerComponent.qml  dialog.cpp  dialog.ui  frame.ui  home.ui  homecontroller.cpp  homecontroller.h  main.cpp  main.qml  page.cpp  page.h  readme.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  clang-format-check.yml  qmake-check.yml
NERODesign/: CMakeLists.txt  NERO.qmlproject  NERO.qmlproject.qtds  NERO.qmlproject.qtds.4e54d59  qmlmodules  qtquickcontrols2.conf
NERODesign/content/: App.qml  Arrow.qml  Battery.qml  BatteryValueComponent.qml  CriticalFaultIcon.qml  DebugGraph.qml  DebugTable.qml  DescriptionModal.qml  DetailDisplay.qml  DirectionView.qml  EffBatteryValueComponent.qml  EffThermometerValueComponent.qml  EfficiencyScreen.qml  ExampleSpedometer.qml  FaultDialog.qml  HeaderView.qml  LabelText.qml  Lightning.qml  MaxDrawGraph.qml  MaxSpeedComparator.qml  MicrophoneComponent.qml  NonCriticalWarning.qml  OffScreen.qml  OffScreen.ui.qml  OffScreen2.qml  OffScreenController.qml  Pit.qml  QMLDialog.qml  RegenStrength.qml  RunInfo.qml  Snake.qml  SnakeBody.qml  SnakeFood.qml  Spedometer.qml  Spedometer.ui.qml  SpeedMode.qml  StatusDisplay.qml  Test.qml  Thermometer.qml  ThermometerComponent.ui.qml  (+6 more)
NERODesign/imports/NERO/: Constants.qml
NERODevelopment/: CMakeLists.txt  NERO.qmlproject  NERO.qmlproject.qtds  main.qml
NERODevelopment/content/: App.qml  Arrow.qml  Battery.qml  BatteryValueComponent.qml  CMakeLists.txt  Configuration.qml  DebugGraph.qml  DebugTable.qml  DescriptionModal.qml  DetailDisplay.qml  EfficiencyScreen.qml  FlappyBird.qml  HomeMenuItem.qml  Keyboard.qml  KeyboardController.qml  KeyboardInput.qml  LabelText.qml  Lily.qml  MaxDrawGraph.qml  MaxSpeedComparator.qml  MicrophoneComponent.qml  NavigationController.qml  OffScreen.qml  OffScreen2.qml  Pit.qml  RunInfo.qml  Screen01.ui.qml  Snake.qml  Spacer.qml  Spedometer.qml  SpeedMode.qml  StatusDisplay.qml  SubheaderComponent.qml  Thermometer.qml  ThermometerComponent.qml  ThermometerValueComponent.qml  TimerDisplay.qml  TorqueAdj.qml  TorqueValueComponent.qml  ValueDisplay.qml
NERODevelopment/imports/: CMakeLists.txt
NERODevelopment/imports/NERO/: CMakeLists.txt  qmldir
NERODevelopment/imports/NERO/designer/: plugin.metainfo
NERODevelopment/src/: import_qml_plugins.h  main.cpp
NERODevelopment/src/controllers/: attributeNames.h  attributestatus.h  buttoncontroller.cpp  buttoncontroller.h  chargingcontroller.cpp  chargingcontroller.h  configurationcontroller.cpp  configurationcontroller.h  debuggraphcontroller.cpp  debuggraphcontroller.h  debugtablecontroller.cpp  debugtablecontroller.h  efficiencycontroller.cpp  efficiencycontroller.h  flappybirdcontroller.cpp  flappybirdcontroller.h  headercontroller.cpp  headercontroller.h  homecontroller.cpp  homecontroller.h  keyboardcontroller.cpp  keyboardcontroller.h  navigationcontroller.cpp  navigationcontroller.h  offViewController.cpp  offViewController.h  offviewcontroller.cpp  offviewcontroller.h  offviewmodel.cpp  offviewmodel.h  signalsController.h  signalscontroler.cpp  speedcontroller.cpp  speedcontroller.h
NERODevelopment/src/models/: mock_model.cpp  mock_model.h  model.cpp  model.h  mqtt_client.cpp  mqtt_client.h  mqttclient.cpp  mqttclient.h  qmlmqttclient.cpp  qmlmqttclient.h  raspberry_model.cpp  raspberry_model.h
NERODevelopment/src/modes/debug_mode/: debug_utils.cpp  debug_utils.h
NERODevelopment/src/proto/serverdata/: serverdata.proto
NERODevelopment/src/utils/: attributestatus.h  data_type_names.h  descriptioninfo.cpp  descriptioninfo.h  server_data.cpp  server_data.h
NERODevelopment/src/views/: thermometercomponent.cpp
build-NERO-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/: qtcsettings.cmake
build-NERO-Qt_6_5_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev
build-NERO-Qt_6_5_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-NERO-Qt_6_5_1_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: Availability.h.2ED23327A8C5DAB4.idx  AvailabilityInternal.h.0A9CD88C6ABA56CF.idx  AvailabilityMacros.h.98C048329B6DD1E3.idx  AvailabilityVersions.h.460DA89FB279CC8D.idx  Home.cpp.4F0700E76E719F7B.idx  Home.cpp.A82C178955D16148.idx  Home.h.2D3218343BE5329E.idx  Home.h.CB1006014AD4C329.idx  Model.h.1F78CF9430B136CF.idx  OSByteOrder.h.4841407B4E5CDA23.idx  QAction.D4E159DCB09952A7.idx  QActionGroup.0E215ADE381E4D85.idx  QApplication.1FEE1EC580BD082A.idx  QApplication.5401DF52E476106A.idx  QCommonStyle.4E6FD8CF4D9AC0DE.idx  QDeadlineTimer.B91D66E3845BAA7F.idx  QDialog.05AB6B72F54DAE76.idx  QEvent.F04527F9865D8560.idx  QFileSystemModel.D6CAEE4799C4E93C.idx  QFormLayout.86A2C8B2A42D0059.idx  QFrame.DB9D7910D4D68165.idx  QGridLayout.BBB77E717FE8D9C7.idx  QHBoxLayout.32AE11A8E68890E1.idx  QHBoxLayout.B641DD2577499101.idx  QHash.215FE2D273FFD280.idx  QLabel.411B765E1721989B.idx  QLabel.D162080FF6B9E883.idx  QLayout.508502F7DA2C6504.idx  QList.0DA3D159B12FBB4A.idx  QList.4C908D70A415AA82.idx  QLocale.7BAF79C1360D9575.idx  QMap.A5960EAC7BAF94FF.idx  QMap.C95792822E585E68.idx  QMargins.6AFE831626393F07.idx  QMatrix4x4.94037C893B10D34F.idx  QMetaType.11C7EA5DA4CE71B7.idx  QMutex.12C44080046F62EB.idx  QObject.5AF4415121D5A3E7.idx  QObject.AE39E8CD6C3090A4.idx  (+957 more)
build-NERODevelopment-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: CMakeCache.txt.prev
constants/: fault_statuses.h
content/: App.qml  Spedometer.qml
controllers/: chargingcontroller.cpp  chargingcontroller.h  efficiencycontroller.cpp  efficiencycontroller.h  homecontroller.cpp  homecontroller.h
models/: data_ids.h  mock_model.cpp  raspberry_model.cpp  raspberry_model.h
modes/debug_mode/: debug_utils.cpp  debug_utils.h  fault_statuses.h
src/controllers/: homecontroller.h
src/models/: mock_model.h
src/views/: thermometercomponent.h
views/: thermometerview.cpp  thermometerview.h
